Added OAuth and update Swagger documentation
